# optimal-design-for-linear-model

./: .flake8  DEVELOPMENT.md  Makefile  README.md  optimal_design.py  pylintrc  pyproject.toml
